Fixed width issue on mobile phones

--- a/css/colorplane-styles.css
+++ b/css/colorplane-styles.css
@@ -17,7 +17,6 @@
 
 .colorplane {
   margin: 1em 0;
-  width: 465px;
 }
 
 .colorplane-selected-color {
